@@ -1,7 +1,7 @@
 {
   "name": "Advanced",
   "description": "Advanced stuff... @todo",
-  "parent": "rftoolscontrol:category_rftoolscontrol",
+  "parent": "rftoolsbase:category_rftoolscontrol",
   "icon": "minecraft:nether_star",
   "sortnum": 30
 }
