@@ -1,7 +1,7 @@
 {
   "name": "Processor",
   "description": "The Processor is the device that actually runs your programs",
-  "parent": "rftoolscontrol:category_rftoolscontrol",
+  "parent": "rftoolsbase:category_rftoolscontrol",
   "icon": "rftoolscontrol:processor",
   "sortnum": 20
 }
