@@ -1,7 +1,7 @@
 {
   "name": "Programmer",
   "description": "The Programmer is the main block you need to actually write programs",
-  "parent": "rftoolscontrol:category_rftoolscontrol",
+  "parent": "rftoolsbase:category_rftoolscontrol",
   "icon": "rftoolscontrol:programmer",
   "sortnum": 10
 }
