@@ -1,7 +1,7 @@
 {
   "name": "Processor",
   "icon": "rftoolscontrol:processor",
-  "category": "rftoolscontrol:category_rftoolscontrol_processor",
+  "category": "rftoolsbase:category_rftoolscontrol_processor",
   "sortnum": 10,
   "pages": [
     {
