@@ -1,3 +1,6 @@
+Upcoming:
+- Fixed patchouli integration
+
 1.20-7.0.0:
 - Port to 1.20
 
